--- a/index.html
+++ b/index.html
@@ -5,12 +5,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./assets/css/index.css">
-    <title>this is my first blog</title>
+    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <title>csc的个人博客</title>
+    <style>
+        *{
+            opacity: 1;
+        }
+        #canvas{
+            display:block;
+            background:#fff;
+            position: absolute;
+            z-index: -10;
+        }
+
+    </style>
 </head>
 <body>
+    <canvas height="100vh" width="100vw" id="canvas"></canvas>
     <div class="container">
-        <h1>关于web的个人理解</h1>
-    </div>
+        <ul class="nav nav-tabs">
+            <li class="nav-item">
+                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="javasctipt:void(0)" role="button" aria-haspopup="true" aria-expanded="false">知识体系</a>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#html">HTML</a>
+                    <a class="dropdown-item" href="#css">CSS</a>
+                    <a class="dropdown-item" href="#js">JS</a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a href="#personal" class="nav-link active">个人履历</a>
+            </li>
+            <li class="nav-item">
+                <a href="#ui-frame" class="nav-link">UI框架</a>
+            </li>
+            <li class="nav-item disabled">
+                <a href="#js-frame" class="nav-link">JS框架</a>
+            </li>
+        </ul>
+        <div class="tab-content">
+            <div role="tabpanel" class="tab-pane fade in active" id="personal">
+                <div>
+                    个人履历
+                </div>
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="html">
+                <div class="html-content content">
+                    <h1>关于HTML</h1>
+                    <p>
+                        html5中新增了很多语义化标签
+                    </p>
+                </div>
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="css">
+                <h1>
+                    关于CSS
+                </h1>
+                C3中，rem及媒体查询的出现，使得适配更简单了一些。
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="js">
+                <h1>Javasctipt</h1>
+                <p>
+                    js的闭包，递归，原型链，以及es6
+                </p>
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="ui-frame">
+                <h1>ui框架</h1>
+                <p>
+                    bootstrap
+                    elementUI
+                    and so on
+                </p>
+            </div>
+            <div role="tabpanel" class="tab-pane fade" id="js-frame">
+                <h1>js框架</h1>
+                <p>
+                    jQuery
+                    VUE
+                    REACT
+                    REACT NATIVE
+                </p>
+            </div>
+        </div>
 
+    </div>
+    <script src="./assets/js/bg.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script>
+
+    </script>
 </body>
 </html>
