--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.bootcss.com/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://cdn.bootcss.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <title>csc的个人博客</title>
+    <title>CSC的个人博客</title>
     <style>
      #canvas{
         display:block;
@@ -69,6 +69,9 @@
                 <p>
                     js的闭包，递归，原型链，以及es6
                 </p>
+                <h5>
+                    <a href="./pages/prototype.html">几种继承方式</a>
+                </h5>
             </div>
             <div role="tabpanel" class="tab-pane fade" id="ui-frame">
                 <h1>ui框架</h1>
@@ -128,7 +131,6 @@
                     做修改，所以 在const了obj之后，是可以对其进行修改的。
                     <hr>
                         var: 使用var声明变量，很容易引起全局变量污染问题，虽然js中有垃圾回收机制，但作为初级学者是不可控的，所以我们在日常开发中，应该尽量减少对var的使用
-
                     </p>
                 </p>
             </div>
